correction padding collapse

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -23,10 +23,11 @@
       background-color: $color-primary;
       color: $color-secondary;
       font-family: "Montserrat";
-      font-size: 35px;
+      font-size: 24px;
       font-style: normal;
       font-weight: 500;
       border-radius: 5px;
+      padding: 10px 20px 10px 15px;
       
 
       &:focus {
